[package]
name = "protohackers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
bytes = "1.4.0"
cfg-if = "1.0.0"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
s0_smoke_test = { version = "0.1.0", path = "./s0_smoke_test" }
s1_prime_time = { version = "0.1.0", path = "./s1_prime_time" }
s2_means_to_an_end = { version = "0.1.0", path = "./s2_means_to_an_end" }
tokio = { version = "1.27.0", features = ["full"] }
tokio-serde = { version = "0.8", features = ["json"] }
tokio-util = { version = "0.7.7", features = ["codec"] }
traits = { version = "0.1.0", path = "./traits" }

[features]
# s0 - smoke_test
s0 = [] # feature has no explicit dependencies
# s1 - prime_time
s1 = []
# s2 - means_to_an_end
s2 = []
