[package]
name = "protohackers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
cfg-if = "1.0.0"
s0_smoke_test = { version = "0.1.0", path = "./s0_smoke_test" }
s1_prime_time = { version = "0.1.0", path = "./s1_prime_time" }
s2_means_to_an_end = { version = "0.1.0", path = "./s2_means_to_an_end" }
s3_budget_chat = { version = "0.1.0", path = "./s3_budget_chat" }
s4_unusual_database_program = { version = "0.1.0", path = "./s4_unusual_database_program" }
server = { version = "0.1.0", path = "./server" }
tokio = { version = "1.27.0", features = ["full"] }

[features]
# s0 - smoke_test
s0 = [] # feature has no explicit dependencies
# s1 - prime_time
s1 = []
# s2 - means_to_an_end
s2 = []
# s3 - budget_chat
s3 = []
# s4 - unusual_database_program
s4 = []
