[package]
name = "s6_speed_daemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
server = { version = "0.1.0", path = "../server" }
tokio = { version = "1.27.0", features = ["full"] }
tokio-serde = { version = "0.8", features = ["json"] }
tokio-util = { version = "0.7.7", features = ["codec"] }
